# flightservice

flight-server/: Cargo.toml
flight-server/data/: batch_5e2bd8c5-5c7c-486a-9c26-69ba0f31156f.mmap
flight-server/src/: main.rs
flight-server/src/utils/: helper.rs  mmap_utils.rs  mod.rs
src/: main.rs
toy-sqlite-api/: main.py  toy_fi_data.db
toy-sqlite-api/db/: initialize.py
toy-sqlite-api/src/: routes.py
toy-strategies/: main.py
toy-strategies/models/: base_strategy.py  query.py  types.py
toy-strategies/strategies/: aapl_volume.py
