[package]
name = "flight-server"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "51.0.0"
arrow-flight = "51.0.0" 
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
